--- a/HalfCandyAnimation/HalfCandyAnimation/ViewController/SecondViewController.xib
+++ b/HalfCandyAnimation/HalfCandyAnimation/ViewController/SecondViewController.xib
@@ -7,7 +7,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SecondViewController">
             <connections>
+                <outlet property="backButton" destination="62B-1a-fLR" id="FfZ-xT-Oge"/>
                 <outlet property="myImageView" destination="36j-6Z-2uv" id="qgg-fH-clQ"/>
+                <outlet property="myTextView" destination="KEH-ph-cjc" id="jCi-9p-3nP"/>
+                <outlet property="textViewHeightConstraint" destination="rNv-ho-rFh" id="Q3a-8h-dDd"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -22,25 +25,40 @@
                         <constraint firstAttribute="height" constant="200" id="jv8-zp-o1q"/>
                     </constraints>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="62B-1a-fLR">
-                    <rect key="frame" x="277" y="285" width="46" height="30"/>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="62B-1a-fLR">
+                    <rect key="frame" x="0.0" y="20" width="46" height="30"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="46" id="Bwn-jJ-4fy"/>
-                        <constraint firstAttribute="height" constant="30" id="w8c-TN-IGr"/>
+                        <constraint firstAttribute="height" constant="30" id="Pzi-ud-5ae"/>
+                        <constraint firstAttribute="width" constant="46" id="aOK-yu-KCf"/>
                     </constraints>
-                    <state key="normal" title="返回"/>
+                    <state key="normal" title="返回">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
                     <connections>
                         <action selector="goBack:" destination="-1" eventType="touchUpInside" id="GF1-rF-uKt"/>
                     </connections>
                 </button>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="KEH-ph-cjc">
+                    <rect key="frame" x="0.0" y="600" width="600" height="0.0"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" id="rNv-ho-rFh"/>
+                    </constraints>
+                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                </textView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="62B-1a-fLR" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="9EA-hb-NLd"/>
+                <constraint firstAttribute="trailing" secondItem="KEH-ph-cjc" secondAttribute="trailing" id="5Mz-DU-NXl"/>
                 <constraint firstItem="36j-6Z-2uv" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Cdf-V5-Srl"/>
+                <constraint firstItem="KEH-ph-cjc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Giw-sO-1pv"/>
+                <constraint firstItem="62B-1a-fLR" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="HO0-mD-yIc"/>
+                <constraint firstAttribute="bottom" secondItem="KEH-ph-cjc" secondAttribute="bottom" id="IzP-aD-p7Q"/>
                 <constraint firstAttribute="trailing" secondItem="36j-6Z-2uv" secondAttribute="trailing" id="ZqG-nP-2Fv"/>
+                <constraint firstItem="62B-1a-fLR" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="bM8-hG-yCn"/>
                 <constraint firstItem="36j-6Z-2uv" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="hBR-Tt-sPl"/>
-                <constraint firstItem="62B-1a-fLR" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="yZJ-ol-SO1"/>
             </constraints>
         </view>
     </objects>
